--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "build": "tsc --module commonjs"
   },
   "peerDependencies": {
-    "@ngrx/store": ">=4",
-    "logrocket": ">=0.6"
+    "@ngrx/store": "^11.1.1",
+    "logrocket": "^1.3.0"
   },
   "devDependencies": {
-    "typescript": "^2.8.1"
+    "typescript": "~4.0.2"
   }
 }
