--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "logrocket-ngrx",
-  "version": "0.1.3",
+  "name": "logrocket-ngrxz",
+  "version": "0.1.4",
   "description": "ngrx middleware for [LogRocket](https://logrocket.com/).",
   "main": "dist/lib/index.js",
   "author": "Logrocket <support@logrocket.com> (https://logrocket.com/)",
